apps/rcl/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: backend
    spec:
      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: media-pvc
      - name: private-resource-storage
        persistentVolumeClaim:
          claimName: resource-pvc
      initContainers: []
      containers:
      - name: backend
        volumeMounts:
        - mountPath: /app/media
          name: media-storage
        - mountPath: /app/private_resources
          name: private-resource-storage
        image: ghcr.io/robotics-content-lab/website/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        startupProbe:
          httpGet:
            path: /health/ready/
            port: 8000
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
        livenessProbe:
          httpGet:
            path: /health/live/
            port: 8000
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ready/
            port: 8000
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
